--- a/week1.ipynb
+++ b/week1.ipynb
@@ -11,8 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Material information week 1\n",
-    "\n",
+    "### Material information week 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://byui-cit.github.io/wdd330/prepare/info/week01.html\n",
     "\n",
     "Web Page with all the resources for Node and NPM\n",
@@ -27,6 +33,91 @@
     "\n",
     "##Git hub Information\n",
     "https://github.com/skills/introduction-to-github"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Syllabus:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "-Heavily in personal peace and group activities.\n",
+    "-I have revise the followings: JavaScript, Arrays(.forEach(), .map(), .filter(), and .sort(). MDN Functions and Manipulation.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Working with Group:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Using GitHub\n",
+    "- Meeting twice a week\n",
+    "- PM Use Trello\n",
+    "- Be part of a team"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Managing the Modern Frontend Workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Tolls for managing changes Package manager, Bundlers, task manager"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Course Set up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://byui-cit.github.io/wdd330/resources/course-setup-v2.html\n",
+    "- Use of VSC\n",
+    "- USe of NODE- NPM\n",
+    "- Use Git and Github\n",
+    "- Teams\n",
+    "- Trello"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-What is the NP version we are going to use? "
    ]
   }
  ],
