--- a/week4.ipynb
+++ b/week4.ipynb
@@ -176,6 +176,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using catch\n",
+    "'''javascript\n",
+    "\n",
+    "let json = '{\"name\":\"John\", \"age\": 30}'; // data from the server\n",
+    "\n",
+    "let user = JSON.parse(json); // convert the text representation to JS object\n",
+    "\n",
+    "// now user is an object with properties from the string\n",
+    "alert( user.name ); // John\n",
+    "alert( user.age );  // 30\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Own Errros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''javascript\n",
+    "let json = '{ \"age\": 30 }'; // incomplete data\n",
+    "\n",
+    "try {\n",
+    "\n",
+    "  let user = JSON.parse(json); // <-- no errors\n",
+    "  alert( user.name ); // no name!\n",
+    "\n",
+    "} catch (err) {\n",
+    "  alert( \"doesn't execute\" );\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
