--- a/weel8.ipynb
+++ b/weel8.ipynb
@@ -114,7 +114,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- In the browser you can Develop, debug and learn\n",
+    "- Use and rely on other people code(libraries) to create my code\n",
+    "- libraries and frameworks change so fast. When you master the first one, it is already obsolete. \n",
+    "- Full stackoverflow: copy and paste other´s people code when your code is not working. 150MB of no sense code that you may not need.\n",
+    "- Mentally exhausted for too many documentation and different tools.\n",
+    "- Rethinking tooling: Develop, Learn, debug\n",
+    "- Now you dont need to dowload stuff you can run it online or running in the background.\n",
+    "- You can see a previous of what you´re building in the editor (VSC). No need to run it online."
+   ]
   },
   {
    "cell_type": "markdown",
