--- a/week10.ipynb
+++ b/week10.ipynb
@@ -43,7 +43,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- "
+    "- it goes line by line\n",
+    "- storing in memory\n",
+    "- execution context: the memory plus the line by line code\n",
+    "- create functions and functions are created but no executed\n",
+    "\n",
+    "        1. this create a local memory\n",
+    "        \n",
+    "        2. this local is not the same than the global\n",
+    "\n",
+    "        3. parentheses and return tell to stop \n",
+    "\n",
+    "        4. the output return to the global variable\n",
+    "\n",
+    "- Call Stack: is tracking the functions and context being called "
    ]
   },
   {
@@ -57,8 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The browser contains some very powerful graphics programming tools, from the Scalable Vector Graphics (SVG) language, to APIs for drawing on HTML.\n",
-    "- to create a 2D or 3D scene on a web page, you need to start with an HTML \"Canvas\"element"
+    "- The"
    ]
   },
   {
