--- a/week10.ipynb
+++ b/week10.ipynb
@@ -70,7 +70,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The"
+    "- there are regular functions and other functions from library  \n",
+    "- function are created to facilitate reusability by generalizing the function\n",
+    "- Revise the function with multiplication and division\n",
+    "    1. the function goes to the process explain before\n",
+    "- We can use the output from other function as input for other function.\n",
+    "-\n"
    ]
   },
   {
