--- a/week10.ipynb
+++ b/week10.ipynb
@@ -75,7 +75,29 @@
     "- Revise the function with multiplication and division\n",
     "    1. the function goes to the process explain before\n",
     "- We can use the output from other function as input for other function.\n",
-    "-\n"
+    "    - in this case the local memory create the process\n",
+    "    - once the process is done it gets deleted \n",
+    "    - it is ready for the next process\n",
+    "    - until it finished\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- functions inside functions can be treated like other objects.\n",
+    "    1. they have the properties of objects.\n",
+    "- passed as arguments \n",
+    "- returned as values\n",
+    "- objects (functions) can be invoked "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Higher order function is the otter function that can handle other functions\n",
+    "2. callbacks are inside."
    ]
   },
   {
